# VideoCapture

./: CMakeLists.txt  main.cpp  video.cpp  video.h  video.ui
